--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.0.6",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.8",
         "postcss-import": "^14.0.1",
+        "resolve-url-loader": "^5.0.0",
         "tailwindcss": "^3.0.0"
     }
 }
